[tool.poetry]
name = "tutr-reflex"
version = "0.1.0"
description = ""
authors = ["Evan Harley <evan.harley21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.3.2"
wrapt = "^1.16.0"
psycopg2-binary = "^2.9.9"
sqlmodel = "0.0.8"
pandas = "^2.1.3"
numpy = "^1.26.2"
passlib = "1.7.4"
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
